Added Contact Me

--- a/index.html
+++ b/index.html
@@ -128,7 +128,34 @@
         </div>
     </div>
     <div id="contactme">
-
+        <div class="heading">
+            <h2>Contact Me</h2>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h2 class="sub-title">Get in touch with me:</h2>
+                    <p><i class="fa-solid fa-envelope"></i>abhirupmaz@gmail.com</p>
+                    <p><i class="fa-solid fa-square-phone"></i>9674043508</p>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com/abhirupmaz.jpg/"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/abhirupmaz/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/abhirupmaz"><i class="fa-brands fa-square-github"></i></a>
+                        <a href="https://www.facebook.com/abhirup.mazumder.3/"><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                    <a href="image/Resume_Latest.pdf" class="btn">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Drop a Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <div class="copyright-text">Made by © abhirupmaz with love.</div>
+        </div>
     </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
