--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <nav class="navbar">
             <ul class="links">
-                <li><a href="#header">Introduce</a></li>
+                <li><a href="#header">Introduction</a></li>
                 <li><a href="#background">Background</a></li>
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#projects">Projects</a></li>
